--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-=== Project Ligerhorn
+=== Fluid Dock Badge for the Tumblr Dashboard
  
 - [Code on GitHub](http://github.com/benstein/fluid-dock-badge-for-tumblr)
  
